--- a/certmanager/operatorgroup.yaml
+++ b/certmanager/operatorgroup.yaml
@@ -2,7 +2,7 @@ apiVersion: operators.coreos.com/v1
 kind: OperatorGroup
 metadata:
   name: cert-manager-operator-group
-  namespace: cert-manager
+  namespace: openshift-cert-manager-operator
 spec:
   targetNamespaces:
   - cert-manager
