--- a/certmanager/channel.yaml
+++ b/certmanager/channel.yaml
@@ -2,7 +2,7 @@ apiVersion: apps.open-cluster-management.io/v1
 kind: Channel
 metadata:
   name: cert-manager-channel
-  namespace: cert-manager
+  namespace: openshift-cert-manager-operator
 spec:
   type: Git
   pathname: "https://github.com/openshift/cert-manager-operator"
