--- a/certmanager/placementrule.yaml
+++ b/certmanager/placementrule.yaml
@@ -2,7 +2,7 @@ apiVersion: apps.open-cluster-management.io/v1
 kind: PlacementRule
 metadata:
   name: prod-clusters
-  namespace: cert-manager
+  namespace: openshift-cert-manager-operator
 spec:
   clusterSelector:
     matchLabels:
