--- a/certmanager/subscription.yaml
+++ b/certmanager/subscription.yaml
@@ -2,7 +2,7 @@ apiVersion: apps.open-cluster-management.io/v1
 kind: Subscription
 metadata:
   name: cert-manager-subscription
-  namespace: cert-manager
+  namespace: openshift-cert-manager-operator
 spec:
   channel: cert-manager/cert-manager-channel
   placement:
